tests/error/ptr_defined.gw
#! [contains] has already been defined in the same scope
var int i;
typedef void i();
